objects/RIC_Article__c.object
<CustomObject>
    <description>RIC Plann&apos;R - Workflow OPP &amp; Produits finis</description>
    <fields>
        <fullName>RIC_Achats__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achats</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>40_CM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Alerte_SuivProm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alerte SuivProm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Article_Principal_Text__c</fullName>
        <label>Article Principal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Article_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Article_autorise_elite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Autorisé Elite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Article_autorise_premier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Autorisé Premier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Autorise_Manifestations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Autorisé Manifestations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marque</label>
        <referenceTo>RIC_Brand__c</referenceTo>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Cat_dnbrmt_periodique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cat. dénbrmt périodique</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_8</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Categorie_fret_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catégorie fret 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>49_CJ</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Cle_GL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clé G/L</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_9</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_CodeTypeRempl__c</fullName>
        <formula>LEFT(TEXT( RIC_Type_Remplacement__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code type remplacement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_Article__c</fullName>
        <description>Alias JDE = LITM</description>
        <externalId>true</externalId>
        <label>Code Article</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RIC_Code_EAN1__c</fullName>
        <description>Isolation du code à 5 caractères pour l&apos;interface export d&apos;Article</description>
        <formula>LEFT(TEXT(RIC_Type_EAN_TEAN01__c),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code EAN1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_EAN2__c</fullName>
        <description>Isolation du code à 5 caractères pour l&apos;interface export Article</description>
        <formula>LEFT(TEXT( RIC_Type_EAN_TEAN02__c) ,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code EAN2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_EAN3__c</fullName>
        <description>Isolation du code à 5 caractères pour l&apos;interface export Articles</description>
        <formula>LEFT(TEXT( RIC_Type_EAN_TEAN03__c ),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code EAN3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_HFM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code HFM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_HF</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Code_Marque__c</fullName>
        <formula>RIC_Brand__r.RIC_Code_Marque__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Marque</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_Publicite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Publicité</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>40_P1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Code_UML1__c</fullName>
        <description>Pour l&apos;interface export  vers JDE, permet de contourner une limite du Data Loader (35 fields max en external reference dans SOQL)</description>
        <formula>RIC_Unite_de_mesure_UML1__r.RIC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code UML1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_UML2__c</fullName>
        <formula>RIC_Unite_de_mesure_UML2__r.RIC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code UML2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_UML3__c</fullName>
        <formula>RIC_Unite_de_mesure_UML3__r.RIC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code UML3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Code_article_NMFC__c</fullName>
        <label>Code article NMFC</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Commandable_Elite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Commandable Elite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Compte_regie__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compte régie</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_S3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Contenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contenance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_06</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Contenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contenant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>55_CO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Lu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Conversion_UM_principale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversion à UM principale</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_UM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Couleur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Couleur</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_CL</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipLabel>RIC Articles (Couleur)</relationshipLabel>
        <relationshipName>Articles56CL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Couleur_du_verre__c</fullName>
        <label>Couleur du verre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Cout_unitaire__c</fullName>
        <label>Coût unitaire</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Date_application__c</fullName>
        <label>Date d&apos;application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Degradation_tarif_A_et_C_N_1__c</fullName>
        <label>Dégradation tarif A et C N+1</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Degradation_tarif_A_et_C_N__c</fullName>
        <label>Dégradation tarif A et C N</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Degre_Alcool__c</fullName>
        <label>Degré d&apos;alcool (%)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RIC_Delai_Livraison_a_Valider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A – Délai de Livraison à Valider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Delai_liv_5_jrs_ouvres__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C – Délai liv. 5 jrs ouvrés</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Delai_liv_6_10_jrs_ouvres__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B – Délai liv. 6 à 10 jrs ouvrés</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Delai_niveau__c</fullName>
        <label>Délai niveau</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Densit_carton_gr_m2__c</fullName>
        <label>Densité carton gr/m2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Description_2__c</fullName>
        <description>Alias JDE = DSC2</description>
        <label>Description 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Disponible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D – Disponible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Duree_residuelle__c</fullName>
        <label>Durée de vie résiduelle</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Duree_vie__c</fullName>
        <label>Durée vie (jrs)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_EAN_Remplace__c</fullName>
        <label>Code EAN Article Remplacé</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_EAN_UCC_13_SYMBOL__c</fullName>
        <label>EAN_UCC_13_SYMBOL</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will be used to decide whether an article can be Edited or not.
Workflow rule will update the value when Status = Crée</description>
        <label>RIC_Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Eligible_Rem_Caviste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible Rem. Caviste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Entrepot1__c</fullName>
        <formula>RIC_Grp_trait_entrepot1__r.RIC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Entrepôt 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Entrepot2__c</fullName>
        <formula>RIC_Grp_trait_entrepot2__r.RIC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Entrepôt 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Entrepot3__c</fullName>
        <formula>RIC_Grp_trait_entrepot3__r.RIC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Entrepôt 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_FLAG_PDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLAG PDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Famille_planification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Famille planification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_P4</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06M4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Famille_produits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Famille produits</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_S1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06ME</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>55_FO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06MO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Grp_trait_entrepot1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Groupe traitement entrepôt 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_02</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06MY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Grp_trait_entrepot2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Groupe traitement entrepôt 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_02</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Mi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Grp_trait_entrepot3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Groupe traitement entrepôt 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_02</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Ms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_ITF_14_SYMBOL_Y56EAN02__c</fullName>
        <label>ITF_14_SYMBOL</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_ITF_14_SYMBOL_Y56EAN03__c</fullName>
        <label>ITF_14_SYMBOL</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Impression_du_prix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impression du prix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Impression_sur_facture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impression sur facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Libelle_Y56LIB01__c</fullName>
        <description>Alias JDE = Y56LIB01</description>
        <label>Libellé</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Libelle_Y56LIB02__c</fullName>
        <description>Alias JDE = Y56LIB01</description>
        <label>Libellé</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Libelle_Y56LIB03__c</fullName>
        <description>Alias JDE = Y56LIB03</description>
        <label>Libellé</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Link_To_Article__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_320,FIND( &apos;/services&apos;, $Api.Partner_Server_URL_320)) &amp; &quot;/&quot; &amp; Id, Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_Link_To_Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Magasin_usine__c</fullName>
        <label>Magasin/usine</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Mat_prem_Bal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mat. Premières/Balance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_05</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06N7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Montant_de_la_taxe_eco__c</fullName>
        <label>Montant de la taxe éco</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Nombre_de_pieces_par_palette__c</fullName>
        <label>Nombre de pièces par palette</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Nomenclature_douaniere__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nomenclature douanière</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_E</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06NH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Num_Planificateur__c</fullName>
        <label>N° planificateur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Num_acheteur__c</fullName>
        <label>N° acheteur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Num_dern_revision__c</fullName>
        <label>N° dernière révision</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Num_fournisseur__c</fullName>
        <label>Nº fournisseur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Num_plan__c</fullName>
        <label>N° plan</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Num_planif__c</fullName>
        <label>N° planif</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Pays_origine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pays origine</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>00_CN</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06NR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Poids_Brut__c</fullName>
        <label>Poids Brut</label>
        <precision>13</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Poids_Net__c</fullName>
        <label>Poids Net</label>
        <precision>13</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Prix_de_cession_UM_CA__c</fullName>
        <label>Prix de cession UM CA (en EUR)</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Prix_de_cession__c</fullName>
        <label>Prix de cession UM BT (en EUR)</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Produit_OPP_MPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produit/OPP/MPC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_P1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Nv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Produit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_07</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Nb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projet</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Promo_GD_HD_Cash__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promo GD/HD/Cash</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41B_DG</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06O5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Qualite_Regroupement_HDO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualité / Regroupement HDO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>57_HD</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06OP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Qualite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualité</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_01</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06OF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Ranking_Marque__c</fullName>
        <label>Ranking Marque</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Ranking_Qualite__c</fullName>
        <label>Ranking Qualité</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Ranking_Regroupement__c</fullName>
        <label>Ranking Regroupement</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Regle_cout_approche__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Règle coût approche</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_P5</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06OZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Regroupement_qualite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regroupement Qualité</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_09</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Oj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Rgrp_Cial_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rgrp. Cial 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>56_R1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06Ot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Sous_famille__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sous-famille</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RIC_UDC__c.RIC_TableAlias__c</field>
                <operation>equals</operation>
                <value>41_S2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>RIC_UDC__c</referenceTo>
        <relationshipName>Articles06P3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RIC_Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A finaliser</fullName>
                    <default>true</default>
                    <label>A finaliser</label>
                </value>
                <value>
                    <fullName>A créer partiellement</fullName>
                </value>
                <value>
                    <fullName>A créer</fullName>
                </value>
                <value>
                    <fullName>Créé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_TECH_ChangedFields__c</fullName>
        <label>RIC_TECH_ChangedFields</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RIC_TECH_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_TECH_Record_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_TECH_Statut__c</fullName>
        <description>Used in JDE interface</description>
        <formula>&quot;Créé&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_Statut</label>
        <type>Text</type>
    </fields>
</CustomObject>